--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -2039,6 +2039,7 @@ div.temperamentLocation p:nth-child(2) {
     padding-top: 2px;
     font-family: 'Vollkorn SC', serif;
     font-weight: bold;
+    font-size: 11px;
 }
 
 .honorCategoryShell p {
