--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -316,6 +316,7 @@ input[type=number] {
 .right-corner-button {
     position: relative;
     border-top-left-radius: 50px;
+    overflow: hidden;
 }
 
 .right-corner-button i {
@@ -343,6 +344,7 @@ input[type=number] {
     font-size: 30px;
     color: gray
 }
+
 .fa-file-download {
     bottom: 19px !important;
 }
@@ -357,13 +359,14 @@ input[type=number] {
 }
 
 .pageBase {
-    height: 1056px;
-    width: 816px;
+    height: 1036px;
+    width: 796px;
     background-color: white;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    padding: 20px;
 }
 
 .pageViewStylings {
@@ -371,18 +374,7 @@ input[type=number] {
     box-shadow: 5px 5px 15px 5px #000000;
 }
 
-.bonfireLogo {
-    background-image: url("../../assets/logo.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 204px;
-    height: 50px;
-    position: absolute;
-    top: 27px;
-    right: 14px;
-}
-
-.dr-icon  {
+.dr-icon {
     float: left;
     background-size: contain;
     background-repeat: no-repeat;
@@ -395,7 +387,7 @@ input[type=number] {
 }
 
 .shield-dr-icon {
-    background-image: url("../../assets/shield.svg");  
+    background-image: url("../../assets/shield.svg");
 }
 
 .pageTwoMargin {
@@ -404,7 +396,6 @@ input[type=number] {
 }
 
 .pageBase p, .pageBase input {
-    position: absolute;
     font-size: 12px;
     margin: 0 0 2px;
     white-space: pre-wrap;
@@ -448,96 +439,8 @@ textarea {
     padding: 1px 5px;
 }
 
-.nameLocation {
-    left: 128px;
-    top: 20px;
-    border-bottom: 2px solid;
-    width: 272px;
-    padding: 1px 5px;
-}
-
-.raceLocation {
-    left: 80px;
-    top: 43px;
-    border-bottom: 2px solid;
-    width: 122px;
-    padding: 1px 5px;
-}
-
-.levelLocation {
-    left: 569px;
-    top: 44px;
-    border-bottom: 2px solid;
-    width: 28px;
-    text-align: center;
-}
-
-input.levelLocation {
-    left: 569px;
-}
-
 .cultural-strength-input {
     width: 100%;
-}
-
-.primaryLocation {
-    left: 307px;
-    top: 44px;
-    width: 115px;
-    padding-left: 5px;
-    border-bottom: 2px solid;
-}
-
-.secondaryLocation {
-    left: 427px;
-    top: 44px;
-    width: 115px;
-    border-bottom: 2px solid;
-    padding-left: 5px;
-}
-
-.crpLocation {
-    left: 104px;
-    top: 67px;
-    width: 46px;
-    text-align: center;
-    border-bottom: 2px solid;
-}
-
-.excurrentLocation {
-    left: 192px;
-    top: 65px;
-    text-align: center;
-    width: 68px;
-    border-bottom: 2px solid;
-}
-
-.extolevelLocation {
-    left: 342px;
-    top: 67px;
-    width: 106px;
-    text-align: center;
-    border-bottom: 2px solid;
-}
-
-.drawbackLocation {
-    left: 20px;
-    top: 87px;
-    text-indent: 128px;
-    width: 426px;
-    height: 51px;
-    overflow: hidden;
-}
-
-.drawbacktextArea {
-    left: 20px;
-    width: 426px;
-    max-width: 426px;
-    min-width: 426px;
-    max-height: 62px;
-    min-height: 62px;
-    text-indent: 122px;
-    overflow: hidden;
 }
 
 .statsShell {
@@ -879,6 +782,8 @@ input.levelLocation {
 strong {
     font-size: 12px;
     font-family: 'Vollkorn SC', serif;
+    font-weight: unset;
+    margin-right: 5px;
 }
 
 .racial-temp-edit-shell {
@@ -942,7 +847,8 @@ div.temperamentLocation strong {
 .combat-table-shell .combat-table-column:nth-child(2) {
     border-left: 1px solid;
 }
-.combat-table-shell .combat-table-column div:nth-child(odd){
+
+.combat-table-shell .combat-table-column div:nth-child(odd) {
     background-color: lightgray;
 }
 
@@ -955,10 +861,11 @@ div.temperamentLocation strong {
     width: 100%;
 }
 
-.combat-table-column div { 
+.combat-table-column div {
     display: flex;
     justify-content: space-between;
 }
+
 .combat-table-column div p {
     padding: 0 5px;
 }
@@ -1087,7 +994,7 @@ div.temperamentLocation strong {
 .damage .tooltip {
     height: 98px;
     width: 62px;
-    right: -65px;
+    left: -65px;
 }
 
 .drshell:hover .tooltip, .damage:hover .tooltip {
@@ -1119,7 +1026,7 @@ div.temperamentLocation strong {
     font-size: 18px;
 }
 
-.weaponsquare .damage { 
+.weaponsquare .damage {
     height: 45px;
 }
 
@@ -2372,6 +2279,7 @@ textarea.traitsLocation {
 .skillRightShell {
     width: 70%;
     position: relative;
+    overflow: hidden;
 }
 
 .skillMods, .combatMods {
@@ -2675,6 +2583,7 @@ textarea.traitsLocation {
 .stressShell div p {
     width: 35%;
 }
+
 .stressShell div input {
     width: 65%;
 }
@@ -2710,7 +2619,7 @@ textarea.traitsLocation {
     width: 75%;
 }
 
-#not-found { 
+#not-found {
     text-align: center;
     width: 400px;
 }
@@ -2741,4 +2650,18 @@ textarea.traitsLocation {
 
 .locked-out {
     color: red
+}
+
+@media (max-width: 825px) {
+    .pageBase {
+        width: 100vw;
+    }
+
+    .pdfViewStylings {
+        margin: 0;
+    }
+
+    .pageViewStylings {
+        box-shadow: unset;
+    }
 }
