--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -77,10 +77,16 @@ input[type=number] {
 .pageOneMiddle {
     margin-top: 10px;
     display: flex;
+    justify-content: space-between;
 }
 
 .leftColumn {
     width: 426px;
+}
+
+.rightColumn {
+    width: 325px;
+    margin-top: -32px;
 }
 
 .dieAndMinShell {
@@ -112,18 +118,6 @@ input[type=number] {
 .dieAndMinShell input {
     width: 25%;
     text-align: center;
-}
-
-.fakebutton:hover {
-    background: rgba(173, 216, 230, 0.50);
-    transition: .8s;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.fakebutton:active {
-    background: rgba(173, 216, 230, 0.75);
-    transition: 0s;
 }
 
 #pdf {
@@ -479,8 +473,8 @@ textarea {
 
 .stressThresholdShell p, .stressThresholdShell input, .rangeShell p, .rangeShell input,
 .skillShell p, .skillShell input, .cashAndGearShell p, .cashAndGearShell input, .baseCombatStatsShell p,
-.armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, .weaponProfileShell p,
-.weaponProfileShell input, .statsShell input, .vitalsShell input, .combatSkills p, .combatSkills input {
+.armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, 
+.statsShell input, .vitalsShell input, .combatSkills p, .combatSkills input {
     position: unset !important;
     z-index: 1;
     margin: 0;
@@ -584,260 +578,6 @@ strong {
 .racial-temp-edit-shell strong {
     margin-top: 4px;
     margin-right: 4px;
-}
-
-.weaponsquare {
-    position: absolute;
-    height: 151px;
-    width: 158px;
-}
-
-.combat-table-shell {
-    font-size: 10px;
-    height: 151px;
-    width: 158px;
-    display: flex;
-}
-
-.combat-table-shell p {
-    position: unset;
-}
-
-.combat-table-column {
-    width: 49%;
-    height: 100%;
-}
-
-.combat-table-column div p {
-    width: 65%;
-    font-size: 10px;
-    text-align: right;
-    margin: 0;
-    height: 15.1px
-}
-
-.combat-table-shell .combat-table-column:nth-child(2) {
-    border-left: 1px solid;
-}
-
-.combat-table-shell .combat-table-column div:nth-child(odd) {
-    background-color: lightgray;
-}
-
-.combat-table-column div:first-child {
-    font-family: "hamlet";
-    letter-spacing: 1.5px;
-    font-size: 11px;
-    background-color: #222 !important;
-    color: whitesmoke;
-    width: 100%;
-}
-
-.combat-table-column div {
-    display: flex;
-    justify-content: space-between;
-}
-
-.combat-table-column div p {
-    padding: 0 5px;
-}
-
-.first-cell {
-    width: 35% !important;
-    font-weight: bold;
-    font-family: 'Vollkorn SC', serif;
-    font-size: 11px !important;
-}
-
-.combat-table-column .column {
-    flex-direction: column;
-}
-
-.combat-table-column .column p {
-    width: 100% !important;
-    text-align: left;
-}
-
-.combat-table-column .column .double {
-    height: 45px;
-}
-
-.weaponone {
-    top: 82px;
-    left: 471px;
-}
-
-.weapontwo {
-    top: 82px;
-    left: 640px;
-}
-
-.weaponthree {
-    top: 260px;
-    left: 472px;
-}
-
-.weaponfour {
-    left: 640px;
-    top: 260px;
-}
-
-.weaponsquare .attack {
-    position: absolute;
-    top: 16px;
-    left: 45px;
-    height: 32px;
-    width: 67px;
-    text-align: center;
-    font-size: 19px;
-}
-
-.weaponsquare .recovery {
-    position: absolute;
-    top: 11px;
-    left: 0px;
-    height: 30px;
-    width: 45px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.weaponsquare .init {
-    position: absolute;
-    top: 9px;
-    left: 104px;
-    height: 32px;
-    width: 54px;
-    text-align: center;
-    font-size: 19px;
-}
-
-.weaponsquare .def {
-    position: absolute;
-    z-index: 1;
-    left: 15px;
-    top: 48px;
-    font-size: 17px;
-    height: 53px;
-    width: 47px;
-    text-align: center;
-    margin: 0 !important;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-evenly;
-}
-
-.weaponsquare .encumb {
-    position: absolute;
-    top: 62px;
-    left: 62px;
-    height: 24px;
-    width: 38px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.weaponsquare .drshell {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 51px;
-    left: 97px;
-    height: 53px;
-    width: 47px;
-    text-align: center;
-    justify-content: center;
-}
-
-.damage .tooltip {
-    position: absolute;
-    right: -63px;
-    z-index: -111;
-    background: lightgrey;
-    padding: 5px;
-    height: 64px;
-    width: 58px;
-    border-radius: 5px;
-    opacity: 0;
-    transition: .6s;
-}
-
-.damage .tooltip {
-    height: 98px;
-    width: 62px;
-    left: -65px;
-}
-
-.drshell:hover .tooltip, .damage:hover .tooltip {
-    opacity: 1;
-    transition-delay: 1s;
-    z-index: 9999;
-}
-
-#armorDr, #def {
-    position: unset;
-    margin: 0;
-    font-size: 13px;
-}
-
-#shieldDr, #shieldCover {
-    border-top: 1px solid lightgrey;
-    position: unset;
-    margin: 0;
-    font-size: 10px;
-}
-
-.weaponsquare .measure {
-    position: absolute;
-    top: 112px;
-    left: 1px;
-    height: 30px;
-    width: 45px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.weaponsquare .damage {
-    height: 45px;
-}
-
-.weaponsquare .damage .tooltip p {
-    align-items: unset;
-    line-height: 18px;
-}
-
-.weaponsquare .parry {
-    position: absolute;
-    top: 113px;
-    left: 108px;
-    height: 36px;
-    width: 49px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.weaponsquare .name {
-    position: absolute;
-    top: -17px;
-    left: 0px;
-    height: 20px;
-    width: 170px;
-    text-align: left;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-.weaponsquare .squareTitle {
-    position: absolute;
-    font-size: 10px;
-    font-family: 'Vollkorn SC', serif;
-    top: -28px;
-    left: 1px;
-    height: 20px;
-    width: 155px;
-    text-align: left;
 }
 
 .stressThresholdShell {
