--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -48,10 +48,6 @@ input[type=number] {
     color: #2192b8;
 }
 
-.downloadStylings .currentBox p:last-child {
-    color: white !important
-}
-
 .downloadingBanner {
     position: absolute;
     z-index: 5;
@@ -445,7 +441,7 @@ textarea {
 
 .skillShell p, .skillShell input, .cashAndGearShell p, .cashAndGearShell input, .baseCombatStatsShell p,
 .armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, 
-.statsShell input, .vitalsShell input, .combatSkills p, .combatSkills input {
+.statsShell input, .combatSkills p, .combatSkills input {
     position: unset !important;
     z-index: 1;
     margin: 0;
@@ -579,33 +575,6 @@ strong {
     display: flex;
 }
 
-.currentstressLocation {
-    top: 426px;
-    left: 546px;
-    width: 74px;
-    text-align: center;
-    z-index: 1;
-}
-
-.stressthresholdLocation {
-    top: 448px;
-    left: 546px;
-    width: 74px;
-    text-align: center;
-}
-
-.mentalBreak {
-    background-color: #990000;
-    color: whitesmoke;
-}
-
-.relaxationLocation {
-    top: 468px;
-    left: 546px;
-    width: 74px;
-    text-align: center;
-}
-
 .favoranointed {
     top: 535px;
     left: 577px;
@@ -617,192 +586,6 @@ strong {
     top: 552px;
     left: 546px;
     width: 74px;
-    text-align: center;
-}
-
-.sizemodLocation {
-    top: 824px;
-    width: 48px;
-    left: 524px;
-    text-align: center;
-}
-
-.vitalsShell {
-    top: 574px;
-    position: absolute;
-    width: 325px;
-    right: 20px;
-}
-
-.woundCategoryShell {
-    position: relative;
-    display: flex;
-}
-
-.woundCategoryShell div {
-    width: 25%;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.woundCategoryShell div:nth-child(even) {
-    background: lightgray;
-}
-
-.vitalsShell p {
-    position: unset;
-}
-
-.woundCategoryShell div p:first-child, .currentBox p:first-child, .thresholdBox p:first-child {
-    font-family: 'Vollkorn SC', serif;
-    font-weight: bold;
-    padding-top: 2px;
-}
-
-.currentBox p:first-child, .thresholdBox p:first-child {
-    font-size: 9px;
-}
-
-.woundCategoryShell p:nth-child(2) {
-    width: 60%;
-    font-size: 10px;
-}
-
-.currentDamageRow {
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-}
-
-.currentBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    border: 2px solid #990000;
-    padding: 0 3px;
-}
-
-.thresholdBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    border: 2px solid grey;
-}
-
-.tinyGrey {
-    font-family: 'Vollkorn SC', serif;
-    font-size: 10px !important;
-    text-align: center;
-    color: grey;
-}
-
-.damageShell {
-    display: flex;
-    justify-content: space-between;
-}
-
-.damageShellLeft, .damageShellRight {
-    display: flex;
-    justify-content: space-between;
-}
-
-.damageShellLeft {
-    width: 46%;
-}
-
-.woundTitleShell p {
-    font-family: 'Vollkorn SC', serif;
-    height: 19.6px;
-    margin: 0;
-    color: grey;
-    padding-top: 2px;
-}
-
-.damageShellLeft .woundTitleShell p {
-    width: 50px;
-}
-
-.damageShellRight .woundTitleShell p {
-    width: 77px;
-}
-
-.woundTitleShell p:nth-child(even) {
-    background: lightgray;
-}
-
-.criticalLocation {
-    width: 60%;
-    text-align: center;
-}
-
-.hurtLocation {
-    width: 74px;
-    text-align: center;
-}
-
-.bloodiedLocation {
-    width: 74px;
-    text-align: center;
-}
-
-.woundedLocation {
-    width: 74px;
-    text-align: center;
-}
-
-.currentDamageLocation {
-    width: 51px;
-    text-align: center;
-}
-
-.traumaLocation {
-    width: 74px;
-    text-align: center;
-}
-
-.vitalyRollsShell {
-    width: 33%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.vitalyRollsShell div {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0 2px;
-    border-right: 2px solid lightgrey;
-}
-
-.vitalyRollsShell div:last-child {
-    border-right: none;
-}
-
-.vitalyRollsShell div p:first-child {
-    font-family: 'Vollkorn SC', serif;
-    margin: 0;
-    padding-top: 2px;
-    font-size: 10px;
-}
-
-.vitalyRollsShell div p:nth-child(2), .vitalyRollsShell div input:nth-child(2) {
-    width: 38%
-}
-
-.vitalityrollLocation {
-    width: 47px;
-    text-align: center;
-}
-
-.vitalitydiceLocation {
-    width: 36px;
-    text-align: center;
-}
-
-.vitalityminLocation {
-    width: 36px;
     text-align: center;
 }
 
@@ -1800,57 +1583,6 @@ textarea.traitsLocation {
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-
-.stressShell, .editingStressThreshold {
-    display: flex;
-    justify-content: space-between;
-}
-
-.stressShell div {
-    display: flex;
-    align-items: center;
-    width: 50%;
-}
-
-.editingStressThreshold div {
-    display: flex;
-    align-items: center;
-}
-
-.editingStressThreshold div {
-    width: 100%;
-}
-
-.stressShell div p {
-    width: 35%;
-}
-
-.stressShell div input {
-    width: 65%;
-}
-
-.stressShell div:first-child {
-    border: 2px solid #990000;
-    width: 49%;
-}
-
-.stressShell div p:first-child, .editingStressThreshold p {
-    font-family: 'Vollkorn SC', serif;
-    font-weight: bold;
-    padding-top: 2px;
-}
-
-.stressShell div:last-child p:first-child {
-    font-family: 'Vollkorn SC', serif;
-    margin: 0;
-    font-weight: normal;
-    font-size: 10px;
-    padding-left: 5px;
-}
-
-.stressShell div:last-child p:last-child {
-    text-align: center;
 }
 
 .editingStressThreshold input, .editingStressThreshold p {
