--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -435,7 +435,7 @@ textarea {
     background: lightgray;
 }
 
-.skillShell p, .skillShell input, .cashAndGearShell p, .cashAndGearShell input, .baseCombatStatsShell p,
+.skillShell p, .skillShell input, .baseCombatStatsShell p,
 .armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, 
 .statsShell input, .combatSkills p, .combatSkills input {
     position: unset !important;
@@ -609,48 +609,6 @@ strong {
     max-height: 1033px;
     overflow: hidden;
     white-space: pre-wrap;
-}
-
-.cashAndGearShell {
-    top: 20px;
-    position: absolute;
-    width: 776px;
-    left: 20px;
-}
-
-.cashShell {
-    position: absolute;
-    top: 0;
-    right: -2px;
-    display: flex;
-    height: 22.4px;
-    padding: 0px 2px;
-}
-
-.cashIndividual {
-    width: 54px;
-    text-align: center;
-}
-
-.cashShell div {
-    width: 75px;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 2px
-}
-
-.cashShell div:nth-child(odd) {
-    background: white
-}
-
-.cashShell div:nth-child(even) {
-    background: lightgray
-}
-
-.cashShell div p {
-    padding-top: 4px;
-    font-family: 'Vollkorn SC', serif;
-    font-weight: bold;
 }
 
 .gearColumns {
