--- a/src/components/character/views/components/pairComponents/editPair.css
+++ b/src/components/character/views/components/pairComponents/editPair.css
@@ -38,6 +38,10 @@
     background: lightgray;
 }
 
+.skillBorder {
+    border-left: 2px solid grey;
+}
+
 .viewPairListStriping {
     overflow: hidden;
 }
@@ -68,7 +72,7 @@
 
 .skillInput {
     padding: 0 4px;
-    width: 151px;
+    width: 150px;
     position: unset !important;
 }
 
@@ -76,7 +80,7 @@
     padding: 0 4px;
     position: unset !important;
     text-align: left;
-    width: 40px;
+    width: 30px;
     z-index: 1;
 }
 
@@ -84,19 +88,19 @@
     padding: 0 4px;
     position: unset !important;
     text-align: center;
-    width: 40px;
+    width: 30px;
 }
 
 .rankInput {
     padding: 0 4px;
     text-align: center;
-    width: 40px;
+    width: 30px;
 }
 
 .modInput {
     padding: 0 4px;
     text-align: center;
-    width: 40px;
+    width: 30px;
 }
 
 #totalCost {
